# narratype-react

./: .gitignore  README.md  package.json
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
client/src/: App.tsx  index.css
client/src/components/: SettingsPanel.tsx  index.ts
client/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  toast.tsx
client/src/demo/: demoData.ts
client/src/pages/: HomePage.tsx  PracticePage.tsx  SettingsPage.tsx  StatsPage.tsx  TextsPage.tsx
client/src/utils/: favorites.ts  settings.ts
kedro_pipeline/: pyproject.toml
kedro_pipeline/conf/base/: catalog.yml  parameters.yml
kedro_pipeline/src/narratype_pipeline/: __init__.py  pipeline_registry.py
kedro_pipeline/src/narratype_pipeline/pipelines/text_ingestion/: nodes.py  pipeline.py
scripts/: db-viewer.py  generate-samples.py
server/app/: database.py  main.py
server/app/api/: __init__.py  exercises.py  sessions.py  texts.py
