[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narratype_pipeline"
version = "0.1.0"
description = "Kedro project for Narratype text processing"
dependencies = [
  "kedro==0.19.9",
  "kedro-datasets==3.0.0"
]

[tool.kedro]
project_name = "narratype_pipeline"
package_name = "narratype_pipeline"
project_version = "0.1.0"

